--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 border: 10px solid #35ACDF;
                 transition: all 0.5s ease;
             }
-            .our-accomplishments-body-icon svg{
+            .our-accomplishments-body-icon img{
                 width: 70px;
                 height: 70px;
             }
@@ -365,6 +365,11 @@
                 font-size: 16px;
                 font-weight: 600;
             }
+            .our-accomplishments-body:hover {
+                color: #fff;
+                transform: translate(-10%, -10%);
+                background-color: #0E68A8;
+}
         </style>
     </head>
     <body>
@@ -558,9 +563,36 @@
                             <img src="images/gallery/11-gallery.jpg" alt="preference">
                         </div>
                         <div class="our-accomplishments-body-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path><polyline points="22 4 12 14.01 9 11.01"></polyline></svg>
+                            <img src="images/icon/3.svg" alt="preference">
                         </div>
                        <p class="our-accomplishments-text">Ми активно розвиваємося і розширюємо наші пропозиції, віддаючи пріоритет динамічному розвитку.</p>
+                    </div>
+                    <div class="our-accomplishments-body">
+                        <div class="our-accomplishments-body-image">
+                            <img src="images/gallery/2-gallery.jpg" alt="preference">
+                        </div>
+                        <div class="our-accomplishments-body-icon">
+                            <img src="images/icon/4.svg" alt="preference">
+                        </div>
+                       <p class="our-accomplishments-text">Лояльність відіграє важливу роль у наших відносинах з нашими клієнтами, і ми завжди прагнемо її підтримувати. </p>
+                    </div>
+                    <div class="our-accomplishments-body">
+                        <div class="our-accomplishments-body-image">
+                            <img src="images/gallery/3-gallery.jpg" alt="preference">
+                        </div>
+                        <div class="our-accomplishments-body-icon">
+                            <img src="images/icon/5.svg" alt="preference">
+                        </div>
+                       <p class="our-accomplishments-text">Принципи порядності, оперативності та прозорості – головні риси нашого способу роботи. </p>
+                    </div>
+                    <div class="our-accomplishments-body">
+                        <div class="our-accomplishments-body-image">
+                            <img src="images/gallery/4-gallery.jpg" alt="preference">
+                        </div>
+                        <div class="our-accomplishments-body-icon">
+                            <img src="images/icon/1.svg" alt="preference">
+                        </div>
+                       <p class="our-accomplishments-text">Ми з гордістю обслуговуємо галузь з 2012 року. </p>
                     </div>
                 </div>
             </div>
