--- a/index.html
+++ b/index.html
@@ -369,7 +369,18 @@
                 color: #fff;
                 transform: translate(-10%, -10%);
                 background-color: #0E68A8;
-}
+            }
+            /*------------------------*/
+            .some-data-numbers {
+                padding: 80px 0;
+            }
+            .some-data-numbers-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+                background-color: #021420;
+            }
         </style>
     </head>
     <body>
@@ -595,6 +606,11 @@
                        <p class="our-accomplishments-text">Ми з гордістю обслуговуємо галузь з 2012 року. </p>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="some-data-numbers">
+            <div class="some-data-numbers-container">
+
             </div>
         </section>
     </body>
