--- a/index.html
+++ b/index.html
@@ -381,6 +381,13 @@
                 margin: 0 auto;
                 background-color: #021420;
             }
+            .some-data-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-transform: capitalize;
+                text-align: center;
+            }
             .some-data-list{
                 display: flex;
                 gap: 40px;
@@ -661,6 +668,7 @@
             </div>
         </section>
         <section class="some-data-numbers">
+            <h2 class="some-data-title">трохи статистики</h2>
             <div class="some-data-numbers-container">
                 <div class="some-data-list">
                     <div class="some-data-list-main">
@@ -688,6 +696,34 @@
                         <div class="some-data-content">
                             <span>+28642</span>
                             <p>Виконані запити</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="some-data-list-main">
+                        <div class="some-data-list-item">
+                        <div class="media-icon-first">
+                            <img src="images/counter-bg.png" alt="counter">
+                            <div class="icon-second">
+                                <img src="images/icon/0.svg" alt="icon">
+                            </div>
+                        </div>
+                        <div class="some-data-content">
+                            <span>+39936</span>
+                            <p>Телефонні дзвінки</p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="some-data-list-main">
+                        <div class="some-data-list-item">
+                        <div class="media-icon-first">
+                            <img src="images/counter-bg.png" alt="counter">
+                            <div class="icon-second">
+                                <img src="images/icon/0.svg" alt="icon">
+                            </div>
+                        </div>
+                        <div class="some-data-content">
+                            <span>+31317</span>
+                            <p>Години консультацій</p>
                         </div>
                         </div>
                     </div>
