--- a/index.html
+++ b/index.html
@@ -439,6 +439,22 @@
             .some-data-content p{
                 font-size: 20px;
             }
+            /*-------------------*/
+            .why-choose-us{
+                padding: 80px 0;
+            }
+            .why-choose-us-container{
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .why-choose-us-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -728,6 +744,11 @@
                     </div>
                 </div>
                 
+            </div>
+        </section>
+        <section class="why-choose-us">
+            <div class="why-choose-us-container">
+                <h2 class="why-choose-us-title">Кілька причин, чому ви звернули увагу на наш сайт:</h2>
             </div>
         </section>
     </body>
