--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 font-size: 15px;
                 font-weight: 600;
                 text-transform: capitalize;
-                margin: 0;
+                margin: 15px;
             }
             .trending-body-text{
                 font-size: 12px;
@@ -378,6 +378,8 @@
             }
             .first-wrapper{
                 background-color: #021420;
+                padding-top: 30px;
+                padding-bottom: 30px;
             }
             .some-data-numbers-container {
                 max-width: 1310px;
