--- a/index.html
+++ b/index.html
@@ -427,17 +427,25 @@
             }
             }
             .icon-second{
-                position: absolute;
+                /* position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
                 width: 100px;
-                height: 100px;
+                height: 100px; */
             }
-            .icon-second img{
+            /* .icon-second img{
                 max-width: 100%;
                 height: auto;
-            }
+            } */
+             .icon-second svg{
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 60px;
+                height: 60px;
+             }
             .some-data-content{
                 text-align: center;
                 font-size: 36px;
@@ -794,6 +802,7 @@
                         <div class="media-icon-first">
                             <img src="images/counter-bg.png" alt="counter">
                             <div class="icon-second">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 17H2a3 3 0 0 0 3-3V9a7 7 0 0 1 14 0v5a3 3 0 0 0 3 3zm-8.27 4a2 2 0 0 1-3.46 0"></path></svg>
                                 <!-- <img src="images/icon/0.svg" alt="icon"> -->
                             </div>
                         </div>
@@ -808,7 +817,7 @@
                         <div class="media-icon-first">
                             <img src="images/counter-bg.png" alt="counter">
                             <div class="icon-second">
-                                <img src="images/icon/0.svg" alt="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.2 7.8l-7.7 7.7-4-4-5.7 5.7"/><path d="M15 7h6v6"/></svg>
                             </div>
                         </div>
                         <div class="some-data-content">
@@ -822,7 +831,7 @@
                         <div class="media-icon-first">
                             <img src="images/counter-bg.png" alt="counter">
                             <div class="icon-second">
-                                <img src="images/icon/0.svg" alt="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3"></path></svg>
                             </div>
                         </div>
                         <div class="some-data-content">
@@ -836,7 +845,7 @@
                         <div class="media-icon-first">
                             <img src="images/counter-bg.png" alt="counter">
                             <div class="icon-second">
-                                <img src="images/icon/0.svg" alt="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21.5 2v6h-6M2.5 22v-6h6M2 11.5a10 10 0 0 1 18.8-4.3M22 12.5a10 10 0 0 1-18.8 4.2"/></svg>
                             </div>
                         </div>
                         <div class="some-data-content">
