--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
             .why-choose-us-wrapper{
                 width: 95%;
                 margin: auto;
-                padding: 10px;
+                padding: 40px;
                 align-items: center;
                 background-color: #E4EEF4;
                 border-radius: 100px;
@@ -489,6 +489,7 @@
             }
             .why-choose-accordion-item{
                 display: flex;
+                flex-direction: row;
                 gap: 20px;
                 align-items: center;
             }
@@ -526,7 +527,7 @@
                 font-size: 24px;
                 font-weight: 600;
             }
-            .why-choose-us-wrapper:hover .image-hover{
+            /* .why-choose-us-wrapper:hover .image-hover{
                 visibility: visible;
                 opacity: 0.9;
                 z-index: 0;
@@ -535,7 +536,14 @@
                 color: #fff;
                 z-index: 1;
 
-            }
+            } */
+             .why-choose-us-wrapper:hover .image-hover, 
+             .why-choose-us-wrapper:hover .why-choose-accordion-item{
+                visibility: visible;
+                opacity: 0.9;
+                z-index: 1;
+                color: #fff;
+             }
         </style>
     </head>
     <body>
