--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
             .trending-items-body:hover{
                 background-color: #0F6CAE;
             }
+            .trending-items-body:hover .trending-body-icon svg{
+                fill: black;
+            }
+            .trending-items-body:hover .trending-link-btn{
+                color: #fff;
+            }
             .trending-items-images{
                 overflow: hidden;
                 border-radius: 10px;
@@ -169,9 +175,9 @@
             .trending-bottom{
                 padding: 15px;
             }
-            .trending-bottom:hover, .trending-link-btn:hover{
+            /* .trending-bottom:hover, .trending-link-btn:hover{
                 color: #fff;
-            }
+            } */
             .trending-link-btn{
                 display: flex;
                 justify-content: center;
