--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                 width: 50px;
                 height: 50px;
             }
-            .trending-body-icon svg:hover {
+            /* .trending-body-icon svg:hover {
                 fill: #000;
-            }
+            } */
             .body-title{
                 font-size: 15px;
                 font-weight: 600;
@@ -190,7 +190,7 @@
             }
             .trending-items-body:hover .trending-body-icon {
                 transform: scaleX(-1);
-                background-color: #fff;
+                /* background-color: #fff; */
             }
             /*----------------------------*/
             .spotlight-stories{
