--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             }
             .trending-items-body:hover .trending-body-icon {
                 transform: scaleX(-1);
-                /* background-color: #fff; */
+                background-color: #fff;
             }
             /*----------------------------*/
             .spotlight-stories{
