--- a/index.html
+++ b/index.html
@@ -682,16 +682,21 @@
             .inside-our-company-shell{
                 display: flex;
                 flex-direction: column;
+                width: 30%;
             }
             .inside-our-company-team{
                 display: flex;
+                flex-direction: row;
                 align-items: flex-start;
-                margin: 0 0 18px 15px;
+                background-color: #f5f6f7;
+                border-radius: 40% 10% 10% 30%;
+                gap: 20px;
+                /* margin: 0 0 18px 15px; */
             }
             .inside-our-company-team-pic{
-            position: relative;
-            z-index: 2;
-            width: 300px;
+                position: relative;
+                z-index: 2;
+                width: 200px;
             }
             .inside-our-company-team-pic img{
                 width: 100%;
@@ -713,7 +718,30 @@
                 transition: all ease 0.4s;
             }
            .inside-our-company-team-content{
-
+                /* padding: 0 0 0 10px; */
+                padding: 25px 30px 30px 0;
+           }
+           .inside-our-company-team-info{
+                /* position: relative;
+                z-index: 1; */
+               
+           }
+           .inside-our-company-team-info::before{
+                /* content: "";
+                position: absolute;
+                left: calc((300px + 30px) / -2);
+                top: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #f9f6f6;
+                z-index: -1;
+                border-radius: 0 30px 30px 0; */
+           }
+           .team-name{
+                font-size: 20px;
+                font-weight: 700;
+                line-height: 133.333333%; /* 40/30 */
+                margin: 0 0 5px 0;
            }
         </style>
     </head>
@@ -1113,7 +1141,7 @@
                             <img src="images/avatar/m-1.jpg" alt="avatar">
                         </div>
                         <div class="inside-our-company-team-content">
-
+                            <h3 class="team-name">Lorem Lorem</h3>
                         </div>
                     </div>
                 </div>
