--- a/index.html
+++ b/index.html
@@ -738,18 +738,7 @@
                 z-index: 1; */
                
            }
-           .inside-our-company-team-info::before{
-                /* content: "";
-                position: absolute;
-                left: calc((300px + 30px) / -2);
-                top: 0;
-                right: 0;
-                bottom: 0;
-                background-color: #f9f6f6;
-                z-index: -1;
-                border-radius: 0 30px 30px 0; */
-           }
-           .team-name{
+            .team-name{
                 font-size: 24px;
                 font-weight: 700;
                 line-height: 133.333333%; /* 40/30 */
@@ -768,9 +757,88 @@
                 margin: 5px 10px 5px 10px;
            }
            .team-information:hover{
-            background-color: #0F6BAC;
-            color: #fff;
+                background-color: #0F6BAC;
+                color: #fff;
            }
+           /*--------------------*/
+           .positive-feedback {
+                padding: 80px 0;
+            }
+            .positive-feedback-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+            }
+            .positive-feedback-title{
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+            }
+            .positive-feedback-shell{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                gap: 30px;
+                width: 100%;
+            }
+            .positive-feedback-body{
+                /* width: 25%; */
+                display: flex;
+                align-items: center;
+                background-color: #F5F5F5;
+                border-radius: 10px;
+                overflow: hidden;
+            }
+            .positive-feedback-image{
+                display: block;
+                width: 100%;
+                max-width: 200px;
+                position: relative;
+            }
+            .positive-feedback-image img{
+                width: 100%;
+                height: 200px;
+                object-fit: contain;
+            }
+            .feedback-quote{
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 60px;
+                height: 60px;
+                line-height: 60px;
+                font-size: 30px;
+                text-align: center;
+                color: #fff;
+                background-color: #0F6EB0;
+                border-radius: 0px 0px 0px 10px;
+            }
+            .feedback-quote svg{
+                fill: white;
+                width: 45px;
+                height: 45px;
+                margin-top: 7px;
+            }
+            .positive-feedback-content{
+                padding: 25px 25px 25px 35px;
+            }
+            .positive-feedback-text{
+                margin: 0 0 18px 0;
+                color: #394c68;
+                line-height: 26px;
+                font-size: 16px;
+                font-weight: 400;
+                text-align: start;
+            }
+            .positive-feedback-name{
+                text-align: start;
+                font-size: 14px;
+                color: #0E66A4;
+            }
         </style>
     </head>
     <body>
@@ -1208,6 +1276,41 @@
                             <div class="team-information">
                                 <p>Начальник відділу закупівель</p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="positive-feedback">
+            <div class="positive-feedback-container">
+                <h2 class="positive-feedback-title">Коментарі</h2>
+                <div class="positive-feedback-shell">
+                    <div class="positive-feedback-body">
+                        <div class="positive-feedback-image">
+                            <img src="images/avatar/m-6.jpg" alt="comments">
+                            <span class="feedback-quote">
+                                <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 379.51"><path d="M299.73 345.54c81.25-22.55 134.13-69.68 147.28-151.7 3.58-22.31-1.42-5.46-16.55 5.86-49.4 36.97-146.53 23.88-160.01-60.55C243.33-10.34 430.24-36.22 485.56 46.34c12.87 19.19 21.39 41.59 24.46 66.19 13.33 106.99-41.5 202.28-137.82 247.04-17.82 8.28-36.6 14.76-56.81 19.52-10.12 2.04-17.47-3.46-20.86-12.78-2.87-7.95-3.85-16.72 5.2-20.77zm-267.78 0c81.25-22.55 134.14-69.68 147.28-151.7 3.58-22.31-1.42-5.46-16.55 5.86-49.4 36.97-146.53 23.88-160-60.55-27.14-149.49 159.78-175.37 215.1-92.81 12.87 19.19 21.39 41.59 24.46 66.19 13.33 106.99-41.5 202.28-137.82 247.04-17.82 8.28-36.59 14.76-56.81 19.52-10.12 2.04-17.47-3.46-20.86-12.78-2.87-7.95-3.85-16.72 5.2-20.77z"/></svg>
+                            </span>
+                        </div>
+                        <div class="positive-feedback-content">
+                            <div class="positive-feedback-text">
+                                <p>Я більш ніж задоволений. Ця компанія є чудовим вибором для бізнесу з привітним персоналом та ефективним обслуговуванням. </p>
+                            </div>
+                            <div class="positive-feedback-name">Ксения Назарова</div>
+                        </div>
+                    </div>
+                    <div class="positive-feedback-body">
+                        <div class="positive-feedback-image">
+                            <img src="images/avatar/m-6.jpg" alt="comments">
+                            <span class="feedback-quote">
+                                <svg xmlns="http://www.w3.org/2000/svg" shape-rendering="geometricPrecision" text-rendering="geometricPrecision" image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 512 379.51"><path d="M299.73 345.54c81.25-22.55 134.13-69.68 147.28-151.7 3.58-22.31-1.42-5.46-16.55 5.86-49.4 36.97-146.53 23.88-160.01-60.55C243.33-10.34 430.24-36.22 485.56 46.34c12.87 19.19 21.39 41.59 24.46 66.19 13.33 106.99-41.5 202.28-137.82 247.04-17.82 8.28-36.6 14.76-56.81 19.52-10.12 2.04-17.47-3.46-20.86-12.78-2.87-7.95-3.85-16.72 5.2-20.77zm-267.78 0c81.25-22.55 134.14-69.68 147.28-151.7 3.58-22.31-1.42-5.46-16.55 5.86-49.4 36.97-146.53 23.88-160-60.55-27.14-149.49 159.78-175.37 215.1-92.81 12.87 19.19 21.39 41.59 24.46 66.19 13.33 106.99-41.5 202.28-137.82 247.04-17.82 8.28-36.59 14.76-56.81 19.52-10.12 2.04-17.47-3.46-20.86-12.78-2.87-7.95-3.85-16.72 5.2-20.77z"/></svg>
+                            </span>
+                        </div>
+                        <div class="positive-feedback-content">
+                            <div class="positive-feedback-text">
+                                <p>Цю компанію обов'язково варто спробувати через їх клієнтоорієнтованого підходу і високої якості послуг.</p>
+                            </div>
+                            <div class="positive-feedback-name">Адам Денисов</div>
                         </div>
                     </div>
                 </div>
