--- a/index.html
+++ b/index.html
@@ -839,6 +839,28 @@
                 font-size: 14px;
                 color: #0E66A4;
             }
+            /*--------------------*/
+            .have-any-questions {
+                padding: 80px 0;
+            }
+            .have-any-questions-container {
+                max-width: 1310px;
+                width: 100%;
+                padding: 0 16px;
+                margin: 0 auto;
+                background-color: #EAF3F9;
+                padding: 60px;
+                border-radius: 6px;
+            }
+            .have-any-questions-title {
+                margin-bottom: 50px;
+                font-size: 36px;
+                font-weight: 600;
+                text-align: center;
+            }
+            .subtitle-text {
+                font-size: 16px;
+            }
         </style>
     </head>
     <body>
@@ -1314,6 +1336,12 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="have-any-questions">
+            <div class="have-any-questions-container">
+                <h2 class="have-any-questions-title">Напишіть нам</h2>
+                <p class="subtitle-text">Ви можете скористатися нашими послугами, написавши нам або зателефонувавши нам. Ми з радістю відповімо на будь-які питання і допоможемо замовити послуги!</p>
             </div>
         </section>
     </body>
